--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "firebase": "^9.12.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-icons": "^4.6.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
